--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 	<title>GitHub Test Index</title>
 </head>
 <body>
-	<h1>Section 1</h1>
-	<h1>Section 2</h1>
-	<h1>Section 3</h1>
-	<h1>Section 4</h1>
-	<h1>Section 5</h1>
-	<h1>Section 6</h1>
-	<h1>Section 7</h1>
+	<div>
+		<h1>Section 1</h1>
+		<h1>Section 2</h1>
+		<h1>Section 3</h1>
+		<h1>Section 4</h1>
+		<h1>Section 5</h1>
+		<h1>Section 6</h1>
+		<h1>Section 7</h1>
+	</div>
 </body>
 </html>
