--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<a href="www.google.com">Google</a>
 		<a href="www.yahoo.com">Yahoo</a>
 		<a href="www.facebook.com">Facebook</a>
+		<a href="www.instagram.com">Instragram</a>
 	</div>
 </body>
 </html>
