--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<a href="www.yahoo.com">Yahoo</a>
 		<a href="www.facebook.com">Facebook</a>
 		<a href="www.instagram.com">Instragram</a>
+		<a href="www.apple.com">Apple</a>
 	</div>
 </body>
 </html>
