--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
 		<a href="www.instagram.com">Instragram</a>
 		<a href="www.foursquare.com">Four Square</a>
 	</div>
+	<div>
+		<span>Thanks!!!</span>
+	</div>
 </body>
 </html>
