--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		<a href="www.foursquare.com">Four Square</a>
 	</div>
 	<div>
-		<span>Thanks!!!</span>
+		<span>Thanks !!!</span>
+		<span>Goodbye !!!</span>
 	</div>
 </body>
 </html>
