--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div>
 		<span>Thanks !!!</span>
 		<span>Goodbye !!!</span>
-		<span>Hi !!</span>
+		<span>Hi Hi !!</span>
 	</div>
 </body>
 </html>
